@@ -9,8 +9,8 @@ val jUnitInterface = "com.github.sbt" % "junit-interface" % "0.13.3" % "test"
 val catsEffect = "org.typelevel" %% "cats-effect" % "3.5.2"
 val catEffectTest = "org.typelevel" %% "cats-effect-testkit" % "3.5.2" % Test
 val scalaReflection = "org.scala-lang" % "scala-reflect" % scalaV
-val logback = "ch.qos.logback" % "logback-classic" % "1.3.11"
-val embedMongoVersion = "4.9.2"
+val logback = "ch.qos.logback" % "logback-classic" % "1.4.11"
+val embedMongoVersion = "4.9.3"
 
 val scalaTestDeps = Seq(
   "org.scalatest" %% "scalatest" % "3.2.17" % Test,
@@ -195,7 +195,7 @@ lazy val scala_akka = (project in file("scala-akka"))
   .settings(
     name := "scala-akka",
     libraryDependencies ++= scala_akka_dependencies ++ Seq(
-      "ch.qos.logback" % "logback-classic" % "1.2.3", // scala-steward:off
+      "ch.qos.logback" % "logback-classic" % "1.4.11", // scala-steward:off
       embeddedMongo % "it,compile"
     ) ++ scalaTestDeps.map(_.withConfigurations(Some("it,test"))),
     Defaults.itSettings
@@ -365,8 +365,8 @@ lazy val scala_libraries_4 = (project in file("scala-libraries-4"))
       "org.testcontainers" % "pulsar" % "1.19.1" % IntegrationTest
     ),
     libraryDependencies ++= Seq(
-      "software.amazon.awssdk" % "s3" % "2.21.7",
-      "com.amazonaws" % "aws-java-sdk-s3" % "1.12.573" % IntegrationTest,
+      "software.amazon.awssdk" % "s3" % "2.21.14",
+      "com.amazonaws" % "aws-java-sdk-s3" % "1.12.580" % IntegrationTest,
       "com.dimafeng" %% "testcontainers-scala-scalatest" % "0.41.0" % IntegrationTest,
       "com.dimafeng" %% "testcontainers-scala-localstack-v2" % "0.41.0" % IntegrationTest
     ),
@@ -404,6 +404,18 @@ lazy val scala_libraries_5 = (project in file("scala-libraries-5"))
       "io.confluent" % "kafka-avro-serializer" % kafkaAvroSerializer,
       "org.apache.logging.log4j" %% "log4j-api-scala" % log4jApiScalaVersion,
       "org.apache.logging.log4j" % "log4j-core" % log4jVersion % Runtime
+    )
+  )
+
+lazy val scala_libraries_6 = (project in file("scala-libraries-6"))
+  .settings(
+    name := "scala-libraries-6",
+    scalaVersion := scala3Version,
+    libraryDependencies ++= scalaTestDeps,
+    libraryDependencies ++= Seq(
+      "io.circe" %% "circe-yaml" % "0.14.2",
+      "io.circe" %% "circe-generic" % "0.14.6",
+      "io.circe" %% "circe-parser" % "0.14.6"
     )
   )
 
@@ -510,7 +522,11 @@ lazy val spark_scala = (project in file("spark-scala"))
     libraryDependencies ++= Seq(
       sparkSqlDep,
       sparkCoreDep
-    ) ++ scalaTestDeps
+    ) ++ scalaTestDeps,
+    fork := true,
+    javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED" // Added for JDK 17 issue with Spark
+    )
   )
 
 addCommandAlias(
